# elonaire-axum-rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-Wasm  README.md  bacon.toml  docker-compose.yml  scripts.sh
.github/workflows/: main.yml
k3s/: configs.sh  manual.sh
k3s/manifests/: acl-service.yaml  api-ingress.yaml  certificates.yaml  cluster-issuer.yaml  common.yaml  egress.yaml  email-service.yaml  files-service.yaml  frontend.yaml  middlewares.yaml  mqtt-broker.yaml  payments-service.yaml  security-headers.yaml  shared-service.yaml  surrealdb-certificate.yaml  surrealdb-ingress.yaml  surrealist-certificate.yaml  surrealist-ingress.yaml  surrealist.yaml  tls-options.yaml  traefik-helmchartconfig.yaml
lib/: Cargo.toml  build.rs
lib/proto/acl/: acl.proto
lib/proto/email/: email.proto
lib/proto/files/: files.proto
lib/src/integration/: foreign_key.rs
lib/src/integration/grpc/: clients.rs
lib/src/middleware/auth/: graphql.rs  grpc.rs  rest.rs
lib/src/utils/: auth.rs  custom_error.rs  grpc.rs  macros.rs  mod.rs  models.rs  serialization.rs
mosquitto/config/: mosquitto.conf
services/shared-service/: Cargo.toml
services/shared-service/src/: main.rs
services/shared-service/src/database/: connection.rs
services/shared-service/src/database/schemas/: schemas.surql
services/shared-service/src/graphql/resolvers/: mutation.rs  query.rs
services/shared-service/src/graphql/schemas/: blog.rs  mod.rs  shared.rs  user.rs
services/shared-service/src/utils/: mod.rs  read_time.rs  syntax_highlighter.rs
