[workspace]
resolver = "2"
members = [
    # Libs
    "lib",
    # Services
    "services/shared-service",
]

[workspace.dependencies]
# Web / HTTP
axum = "0.8.6"
hyper = "1.7.0"
tower-http = { version = "0.6.6", features = ["cors"] }
tower_governor = "=0.8.0"
reqwest = { version = "0.12.23", features = ["json"] }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"

# GraphQL
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"

# gRPC / Protobuf
tonic = "0.12.3"
tonic-build = "0.12.3"
tonic-middleware = "0.2.3"
prost = "0.13.5"

# Database
surrealdb = "2.3.10"

# Serialization
serde = "1.0.228"

# Tracing / Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"

# Utilities
chrono = "0.4.42"
dotenvy = "0.15.7"
cookie = "0.18.1"
uuid = "1.20.0"
markdown = "1.0.0"
scraper = "0.25.0"
syntect = "5.3.0"
html2text = "0.16.7"
anyhow = "1.0.102"

# Internal
lib = { path = "lib" }

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
