[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
cookie = { workspace = true }
async-graphql = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
surrealdb = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tonic-middleware = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
