[package]
name = "shared-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
surrealdb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
lib = { workspace = true }
reqwest = { workspace = true }
markdown = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-middleware = { workspace = true }
uuid = { workspace = true }
scraper = { workspace = true }
syntect = { workspace = true }
tower_governor = { workspace = true }
html2text = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
